# ForwardTracking

./: AUTHORS  CMakeLists.txt  README  README.md
.github/workflows/: coverity.yml  linux.yml
doc/: CMakeLists.txt  ReleaseNotes.md  overview.html
include/Analysis/: CritAnalyser.h  OverlapChecker.h  StepAnalyser.h  TrueTrackCritAnalyser.h
include/CellularAutomaton/: MyAutProcessor.h  Segment.h
include/Criteria/: Crit2_DeltaPhi.h  Crit2_DeltaRho.h  Crit2_HelixWithIP.h  Criteria.h  ICriterion.h
include/FTDNoise/: FTDBackgroundProcessor.h  FTDBackgroundProcessor00.h  FTDBackgroundProcessor01.h  FTDGhostProcessor.h  FTDNoiseProcessor.h
include/FTrack/: AutCode.h  AutHit.h  Automaton.h  Crit2_DeltaPhi.h  Crit2_HelixWithIP.h  Crit2_RZRatio.h  Crit2_StraightTrack.h  Crit2_StraightTrackRatio.h  Crit3_3DAngle.h  Crit3_ChangeRZRatio.h  Crit3_IPCircleDist.h  Crit3_PTMin.h  Crit4_2DAngleChange.h  Crit4_NoZigZag.h  Crit4_PhiZRatio.h  Crit4_PhiZRatioChange.h  Crit4_RChange.h  Crit4_distOfCircleCenters.h  Crit4_distToExtrapolation.h  CritRZRatio.h  FTDRepresentation.h  FTDSegRepresentation.h  FTDTrackFitter.h  FTrackExceptions.h  ForwardTracking.h  HitCon.h  HopfieldNeuralNet.h  ICriteria.h  ICriterion.h  IHit.h  IHitConnector.h  ISectorSystem.h  ITrack.h  ITrackSubset.h  MyTrack.h  Segment.h  SegmentBuilder.h  SimpleCircle.h  SimpleHit.h  TrackSubset.h  (+2 more)
include/ForwardTracking/: DDForwardTracking.h  EndcapHit01.h  EndcapHitSimple.h  EndcapSectorConnector.h  EndcapTrack.h  ForwardTracking.h  ForwardTracking00.h  IEndcapHit.h  SectorSystemEndcap.h  SiliconEndcapTracking.h  TrackSubsetProcessor.h
include/ILDImpl/: FTDHit00.h  FTDHit01.h  FTDHitCon00.h  FTDHitCon01.h  FTDHitSimple.h  FTDNeighborPetalHitCon.h  FTDNeighborPetalSecCon.h  FTDSecCon00.h  FTDSecCon01.h  FTDTrack.h  IFTDHit.h  SectorSystemFTD.h
include/NeuralNetwork/: NeuralNet.h  NeuralNetProcessor.h
include/Tools/: FTrackILDTools.h  FTrackTools.h  Fitter.h  Timer.h
include/TrackPicker/: TrackPickProcessor.h
include/TrackingFeedback/: RecoTrack.h  TrackingFeedbackProcessor.h  TrueTrack.h
src/Analysis/: CritAnalyser.cc  OverlapChecker.cc  QuantileAnalyser.cc  StepAnalyser.cc  TrueTrackCritAnalyser.cc
src/CellularAutomaton/: MyAutProcessor.cc  Segment.cc  SimpleCircle.cc
src/Criteria/: Crit2_DeltaPhi.cc  Crit2_DeltaRho.cc  Crit2_HelixWithIP.cc  Crit2_RZRatio.cc  Crit2_StraightTrackRatio.cc  Crit3_2DAngle.cc  Crit3_3DAngle.cc  Crit3_ChangeRZRatio.cc  Crit3_IPCircleDist.cc  Crit3_PT.cc  Crit4_2DAngleChange.cc  Crit4_3DAngleChange.cc  Crit4_DistOfCircleCenters.cc  Crit4_DistToExtrapolation.cc  Crit4_NoZigZag.cc  Crit4_PhiZRatioChange.cc  Crit4_RChange.cc  Criteria.cc
src/Executables/: CritRunner.cc  QuantileAnalyser.cc  param_runner.cc  param_runner_background.cc  worker.cc  worker_time.cc
src/FTDNoise/: FTDBackgroundProcessor.cc  FTDBackgroundProcessor00.cc  FTDBackgroundProcessor01.cc  FTDGhostProcessor.cc  FTDNoiseProcessor.cc
src/FTrack/: AutCode.cc  AutHit.cc  Automaton.cc  Crit2_DeltaPhi.cc  Crit2_HelixWithIP.cc  Crit2_RZRatio.cc  Crit2_StraightTrack.cc  Crit3_3DAngle.cc  Crit3_ChangeRZRatio.cc  Crit3_IPCircleDist.cc  Crit3_PT.cc  Crit3_PTMin.cc  Crit4_2DAngleChange.cc  Crit4_NoZigZag.cc  Crit4_PhiZRatio.cc  Crit4_PhiZRatioChange.cc  Crit4_RChange.cc  Crit4_distOfCircleCenters.cc  Crit4_distToExtrapolation.cc  CritRZRatio.cc  FTDRepresentation.cc  FTDSegRepresentation.cc  FTDTrackFitter.cc  ForwardTracking.cc  HitCon.cc  HopfieldNeuralNet.cc  IHit.cc  MyTrack.cc  Segment.cc  SegmentBuilder.cc  SimpleCircle.cc  SimpleHit.cc  TrackSubset.cc  TrackSubsetHopfieldNN.cc
src/ForwardTracking/: DDForwardTracking.cc  EndcapHelixFitter.cc  EndcapHelixFitter.h  EndcapHit01.cc  EndcapHitSimple.cc  EndcapSectorConnector.cc  EndcapTrack.cc  ForwardTracking.cc  ForwardTracking00.cc  SectorSystemEndcap.cc  SiliconEndcapTracking.cc  TrackSubsetProcessor.cc
src/ILDImpl/: FTDHit00.cc  FTDHit01.cc  FTDHitCon00.cc  FTDHitCon01.cc  FTDHitSimple.cc  FTDNeighborPetalHitCon.cc  FTDNeighborPetalSecCon.cc  FTDSecCon00.cc  FTDSecCon01.cc  FTDTrack.cc  HitCon.cc  SectorSystemFTD.cc
src/NeuralNetwork/: NeuralNet.cc  NeuralNetProcessor.cc
src/NeuronalNetwork/: NeuronNetProcessor.cc
src/Tools/: FTrackILDTools.cc  FTrackTools.cc  Fitter.cc  Timer.cc
src/TrackPicker/: TrackPickProcessor.cc
src/TrackingFeedback/: RecoTrack.cc  TrackingFeedbackProcessor.cc  TrueTrack.cc
src/rootscripts/: efficiency.cc  efficiency_nhits.cc  efficiency_pt.cc  efficiency_theta.cc  efficiency_vertex.cc  ghostrate.cc  make_diagram_from_csv.cc  splitEfficiency.cc  splitGhostrate.cc
src/testing/: test_AutCode.cc  test_hello_world.cc  test_simple_circle.cc
